--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <head>
+	
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@adere.so" />
 	<meta name="twitter:creator" content="@festevez" />
